Checkpoint commit for 0.5.5.9. - Render data by insert order Semaphore sometimes is probably destroyed(?) twice or something. Added additional checks but the problem seem to bypass them.
In Progress:
0.5.5. If possible optimise further Vulkan Implementation after render data reusability:
0.5.5.9 Render Data by insert order. Prepare synchronized map (camera, texture) -> descriptor, bind descriptor on each object and render evenly on all cores